--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Arie</title>
+<title>Accuracy</title>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <style>
             body,html
@@ -47,9 +47,9 @@
 <body onscroll="if(this.scrollY>((40-5)*16)){document.getElementsByClassName('topbar')[0].style.opacity=1;}else{document.getElementsByClassName('topbar')[0].style.opacity=0;}">
 <header>
 <div class="heroSwipe">
-<h2 class="title">Arie</h2>
+<h2 class="title">Accuracy <!-- Insert target/graphic/emoji here? --></h2>
 <div class="text">This site is IPv6 capable</div>
-<div class="topbar"><div class="title">Arie</div></div>
+<div class="topbar"><div class="title">accuracy</div></div>
 </div>
 </header>
 </body>
